--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ anyio==4.12.1
 bcrypt==4.0.1
 certifi==2026.1.4
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.1
 coverage==7.13.1
 cryptography==46.0.3
 dbsession==0.6.7
+Deprecated==1.3.1
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
@@ -19,6 +21,7 @@ httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
+limits==5.6.0
 Mako==1.3.10
 MarkupSafe==3.0.3
 packaging==25.0
@@ -37,14 +40,18 @@ python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.21
 PyYAML==6.0.3
+requests==2.32.5
 rsa==4.9.1
 six==1.17.0
+slowapi==0.1.9
 SQLAlchemy==2.0.45
 starlette==0.50.0
+stripe==14.1.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.3
 uvicorn==0.40.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==16.0
-stripe>=8.0.0
+wrapt==2.0.1
